tests/cases/scc/error/0020-storage2.c

short d;
char d;

register int
func4(int par)
{
    static f;

	return f+par;
}


